cmake_minimum_required(VERSION 3.24)
project(advent_of_code_2022)

set(CMAKE_CXX_STANDARD 23)

add_executable(advent_of_code_2022 main.cpp day_1/day_1.cpp day_1/day_1.h day_2/day_2.cpp day_2/day_2.h day_3/day_3.cpp day_3/day_3.h day_4/day_4.cpp day_4/day_4.h day_5/day_5.cpp day_5/day_5.h day_6/day_6.cpp day_6/day_6.h day_7/day_7.cpp day_7/day_7.h day_8/day_8.cpp day_8/day_8.h day_9/day_9.cpp day_9/day_9.h)
